--- a/souvenir-akhir-tahun-kalender.html
+++ b/souvenir-akhir-tahun-kalender.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/souvenir-akhir-tahun-kalender">
     <title>Souvenir Akhir Tahun Kantor: Kalender 2026 & Agenda Eksklusif | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Siapkan corporate gift akhir tahun lebih awal! Paket Kalender Dinding, Kalender Meja, dan Buku Agenda 2026 kustom logo perusahaan. Harga early bird tersedia.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Souvenir Akhir Tahun: Pastikan Brand Anda Diingat Sepanjang 2026">
     <meta property="og:description"
         content="Mengapa kalender dan agenda masih menjadi souvenir paling powerful? Temukan strateginya di sini.">
-    <meta property="og:image" content="assets/souvenir-kalender-agenda-tahun-baru.png">
+    <meta property="og:image" content="assets/souvenir-kalender-agenda-tahun-baru.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/souvenir-akhir-tahun-kalender">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Souvenir Akhir Tahun: Investasi Branding 365 Hari dengan Kalender & Agenda",
             "image": [
-                "https://hampersmalang.web.id/assets/souvenir-kalender-agenda-tahun-baru.png",
-                "https://hampersmalang.web.id/assets/kalender-meja-2026-modern.png"
+                "https://hampersmalang.web.id/assets/souvenir-kalender-agenda-tahun-baru.webp",
+                "https://hampersmalang.web.id/assets/kalender-meja-2026-modern.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-02",
@@ -274,7 +274,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -324,7 +324,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/souvenir-kalender-agenda-tahun-baru.png"
+                        <img src="assets/souvenir-kalender-agenda-tahun-baru.webp"
                             alt="Set Kalender Meja dan Agenda Kulit Tahun 2026"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
@@ -382,11 +382,12 @@
                         <li><strong>Kualitas Cetak:</strong> Kertas yang tebal, dudukan (linmaster) yang kokoh, dan
                             jilid spiral yang rapi.</li>
                         <li><strong>Fitur Tambahan:</strong> Menambahkan tanggal libur nasional yang akurat, atau kolom
-                            <em>notes</em> yang cukup luas.</li>
+                            <em>notes</em> yang cukup luas.
+                        </li>
                     </ul>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/kalender-meja-2026-modern.png" alt="Desain Kalender Meja Minimalis 2026"
+                        <img src="assets/kalender-meja-2026-modern.webp" alt="Desain Kalender Meja Minimalis 2026"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Desain minimalis dan fungsional lebih disukai oleh kalangan profesional muda.
@@ -430,7 +431,7 @@
                     </p>
                     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem; margin: 2rem 0;">
                         <figure>
-                            <img src="assets/executive-pen.png" alt="Pulpen Metal Eksklusif"
+                            <img src="assets/executive-pen.webp" alt="Pulpen Metal Eksklusif"
                                 style="width: 100%; height: auto; border-radius: 8px;">
                             <figcaption
                                 style="text-align: center; color: #64748B; font-size: 0.8rem; margin-top: 0.5rem;">
@@ -438,7 +439,7 @@
                             </figcaption>
                         </figure>
                         <figure>
-                            <img src="assets/express-tumbler.png" alt="Tumbler Minum"
+                            <img src="assets/express-tumbler.webp" alt="Tumbler Minum"
                                 style="width: 100%; height: auto; border-radius: 8px;">
                             <figcaption
                                 style="text-align: center; color: #64748B; font-size: 0.8rem; margin-top: 0.5rem;">
@@ -458,8 +459,8 @@
                         </h4>
                         <p style="margin-bottom: 0.5rem;">Selain akhir tahun, pastikan Anda juga siap untuk:</p>
                         <ul style="margin-bottom: 0;">
-                            <li><a href="hampers-lebaran-perusahaan"
-                                    style="color: #e11d48; font-weight: 600;">Hampers Lebaran & Idul Fitri</a></li>
+                            <li><a href="hampers-lebaran-perusahaan" style="color: #e11d48; font-weight: 600;">Hampers
+                                    Lebaran & Idul Fitri</a></li>
                             <li><a href="onboarding-kit-karyawan" style="color: #e11d48; font-weight: 600;">Welcome
                                     Kit Karyawan Baru</a></li>
                             <li><a href="souvenir-promosi-doktor-guru-besar"
@@ -543,7 +544,7 @@
                             <div
                                 style="background: white; border: 2px solid #b91c1c; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/souvenir-kalender-agenda-tahun-baru.png" alt="Pesan Kalender 2026"
+                                    <img src="assets/souvenir-kalender-agenda-tahun-baru.webp" alt="Pesan Kalender 2026"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(185, 28, 28, 0.9));">
@@ -574,7 +575,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -625,7 +626,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/katalog-event-perusahaan.png"
+                                <img src="assets/katalog-event-perusahaan.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Event Guide">
                                 <div>
@@ -642,7 +643,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/hampers-lebaran-kantor.png"
+                                <img src="assets/hampers-lebaran-kantor.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Hampers Lebaran">
                                 <div>
@@ -659,8 +660,8 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/souvenir-rups-saham.png"
-                                    onerror="this.src='assets/category-executive.png'"
+                                <img src="assets/souvenir-rups-saham.webp"
+                                    onerror="this.src='assets/category-executive.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="RUPS">
                                 <div>
@@ -810,5 +811,3 @@
 </body>
 
 </html>
-
-
