--- a/souvenir-kampus-universitas.html
+++ b/souvenir-kampus-universitas.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/souvenir-kampus-universitas">
     <title>Pusat Souvenir Kampus, Merchandise Universitas & Paket Promosi Doktor | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat pembuatan souvenir kampus terlengkap. Mulai dari merchandise mahasiswa baru (PKKMB), paket seminar akademik, hingga souvenir promosi doktor guru besar.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Pusat Souvenir Kampus: Solusi Merchandise Akademik dari Maba hingga Profesor">
     <meta property="og:description"
         content="Temukan katalog lengkap merchandise universitas untuk berbagai level acara. Kualitas premium untuk institusi pendidikan modern.">
-    <meta property="og:image" content="assets/souvenir-kampus-universitas.png">
+    <meta property="og:image" content="assets/souvenir-kampus-universitas.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/souvenir-kampus-universitas">
     <meta property="og:type" content="article">
 
@@ -29,9 +29,9 @@
             "@type": "Article",
             "headline": "Pusat Souvenir Kampus, Merchandise Universitas & Promosi Doktor Terlengkap",
             "image": [
-                "https://hampersmalang.web.id/assets/souvenir-kampus-universitas.png",
-                "https://hampersmalang.web.id/assets/merchandise-mahasiswa-baru.png",
-                "https://hampersmalang.web.id/assets/paket-seminar-kit-kampus.png"
+                "https://hampersmalang.web.id/assets/souvenir-kampus-universitas.webp",
+                "https://hampersmalang.web.id/assets/merchandise-mahasiswa-baru.webp",
+                "https://hampersmalang.web.id/assets/paket-seminar-kit-kampus.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -42,7 +42,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-02",
@@ -275,7 +275,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -325,7 +325,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/souvenir-kampus-universitas.png"
+                        <img src="assets/souvenir-kampus-universitas.webp"
                             alt="Koleksi Lengkap Merchandise Universitas dan Seminar Kit"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
@@ -379,7 +379,7 @@
                     </ul>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/merchandise-mahasiswa-baru.png"
+                        <img src="assets/merchandise-mahasiswa-baru.webp"
                             alt="Paket Starter Kit Mahasiswa Baru Tote Bag dan Stationery"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
@@ -407,7 +407,7 @@
                     </p>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/paket-seminar-kit-kampus.png"
+                        <img src="assets/paket-seminar-kit-kampus.webp"
                             alt="Goodie Bag Seminar Kit Premium dengan Blocknote dan Pulpen"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
@@ -453,7 +453,7 @@
                     </div>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/souvenir-promosi-doktor-guru-besar.png"
+                        <img src="assets/souvenir-promosi-doktor-guru-besar.webp"
                             alt="Souvenir Promosi Doktor Premium dalam Box Bludru"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
@@ -543,7 +543,7 @@
                             <div
                                 style="background: white; border: 2px solid #0369a1; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/souvenir-kampus-universitas.png" alt="Pesan Souvenir Kampus"
+                                    <img src="assets/souvenir-kampus-universitas.webp" alt="Pesan Souvenir Kampus"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(3, 105, 161, 0.9));">
@@ -574,7 +574,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -626,8 +626,8 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/souvenir-promosi-doktor-guru-besar.png"
-                                    onerror="this.src='assets/souvenir-wisuda-premium.png'"
+                                <img src="assets/souvenir-promosi-doktor-guru-besar.webp"
+                                    onerror="this.src='assets/souvenir-wisuda-premium.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Promosi Doktor">
                                 <div>
@@ -644,7 +644,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/paket-seminar-kit-kampus.png"
+                                <img src="assets/paket-seminar-kit-kampus.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Seminar Kit">
                                 <div>
@@ -661,7 +661,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/merchandise-mahasiswa-baru.png"
+                                <img src="assets/merchandise-mahasiswa-baru.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Mahasiswa Baru">
                                 <div>
@@ -811,5 +811,3 @@
 </body>
 
 </html>
-
-
