--- a/souvenir-perusahaan-eksklusif.html
+++ b/souvenir-perusahaan-eksklusif.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/souvenir-perusahaan-eksklusif">
     <title>Souvenir Perusahaan Eksklusif & Premium Gift Set (Katalog 2026) | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Panduan memilih souvenir perusahaan eksklusif untuk klien VVIP dan mitra bisnis. Temukan ide Gift Set Premium, Leather Goods, dan Gadget Mewah dengan cetak logo elegan.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Souvenir Perusahaan Eksklusif & Premium Gift Set (Katalog 2026)">
     <meta property="og:description"
         content="Jangan pertaruhkan reputasi brand Anda dengan souvenir murahan. Simak panduan lengkap memilih corporate gift set yang mewah dan berkelas.">
-    <meta property="og:image" content="assets/executive-hardbox.png">
+    <meta property="og:image" content="assets/executive-hardbox.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/souvenir-perusahaan-eksklusif">
     <meta property="og:type" content="article">
 
@@ -29,9 +29,9 @@
             "@type": "Article",
             "headline": "Souvenir Perusahaan Eksklusif: Seni Memikat Klien VVIP",
             "image": [
-                "https://hampersmalang.web.id/assets/executive-hardbox.png",
-                "https://hampersmalang.web.id/assets/executive-leather.png",
-                "https://hampersmalang.web.id/assets/executive-pen.png"
+                "https://hampersmalang.web.id/assets/executive-hardbox.webp",
+                "https://hampersmalang.web.id/assets/executive-leather.webp",
+                "https://hampersmalang.web.id/assets/executive-pen.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -42,7 +42,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-01",
@@ -270,7 +270,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -316,7 +316,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/executive-hardbox.png" alt="Set Souvenir Perusahaan Eksklusif dengan Hardbox"
+                        <img src="assets/executive-hardbox.webp" alt="Set Souvenir Perusahaan Eksklusif dengan Hardbox"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
                             Gift Set Premium dengan kemasan Hardbox Eksklusif mencerminkan prestise perusahaan Anda.
@@ -399,7 +399,7 @@
                         <li><strong>Clutch Bag / Pouch:</strong> Untuk membawa perlengkapan esensial saat meeting.</li>
                     </ul>
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/executive-leather.png" alt="Koleksi Souvenir Kulit Eksklusif"
+                        <img src="assets/executive-leather.webp" alt="Koleksi Souvenir Kulit Eksklusif"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Kombinasi material kulit sintetis premium (PU Leather) atau kulit asli memberikan kesan
@@ -440,7 +440,7 @@
                     </p>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/executive-pen.png" alt="Gift Set Pen Metal dalam Hardbox"
+                        <img src="assets/executive-pen.webp" alt="Gift Set Pen Metal dalam Hardbox"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Detail kemasan yang rapi meningkatkan ekspektasi penerima sebelum melihat isinya.
@@ -573,7 +573,7 @@
                             <div
                                 style="background: white; border: 2px solid var(--accent); border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/corporate-gift.png" alt="Promo Gift Set"
+                                    <img src="assets/corporate-gift.webp" alt="Promo Gift Set"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(0,0,0,0.6));">
@@ -605,7 +605,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -641,10 +641,10 @@
                             <ul class="cat-list">
                                 <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-crown"></i>
                                         Exclusive Gifts</a></li>
-                                <li class="cat-item"><a href="category-gadget"><i
-                                            class="fa-solid fa-mobile-screen"></i> Gadget & Tech</a></li>
-                                <li class="cat-item"><a href="category-drinkware"><i
-                                            class="fa-solid fa-mug-hot"></i> Premium Tumbler</a></li>
+                                <li class="cat-item"><a href="category-gadget"><i class="fa-solid fa-mobile-screen"></i>
+                                        Gadget & Tech</a></li>
+                                <li class="cat-item"><a href="category-drinkware"><i class="fa-solid fa-mug-hot"></i>
+                                        Premium Tumbler</a></li>
                             </ul>
                         </div>
 
@@ -654,7 +654,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/gadget-powerbank.png"
+                                <img src="assets/gadget-powerbank.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Powerbank Custom">
                                 <div>
@@ -672,7 +672,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/drinkware-thermos.png"
+                                <img src="assets/drinkware-thermos.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Tumbler Stainless">
                                 <div>
@@ -690,7 +690,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/hero-packages.png"
+                                <img src="assets/hero-packages.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Seminar Kit">
                                 <div>
@@ -841,5 +841,3 @@
 </body>
 
 </html>
-
-
