--- a/souvenir-promosi-doktor-guru-besar.html
+++ b/souvenir-promosi-doktor-guru-besar.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/souvenir-promosi-doktor-guru-besar">
     <title>7 Ide Souvenir Promosi Doktor yang Berkesan untuk Dewan Penguji (Update 2026)</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Rekomendasi souvenir promosi doktor dan sidang terbuka untuk Dewan Penguji. Gift set powerbank, pen parker, dan tumbler suhu grafir nama yang elegan dan bermanfaat.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="7 Ide Souvenir Promosi Doktor yang Berkesan untuk Dewan Penguji">
     <meta property="og:description"
         content="Jangan sampai salah pilih bingkisan untuk momen sakral akademik Anda. Temukan inspirasi gift set premium di sini.">
-    <meta property="og:image" content="assets/souvenir-promosi-doktor-cover.png">
+    <meta property="og:image" content="assets/souvenir-promosi-doktor-cover.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/souvenir-promosi-doktor-guru-besar">
     <meta property="og:type" content="article">
 
@@ -29,9 +29,9 @@
             "@type": "Article",
             "headline": "7 Ide Souvenir Promosi Doktor yang Berkesan untuk Dewan Penguji (Update 2026)",
             "image": [
-                "https://hampersmalang.web.id/assets/souvenir-promosi-doktor-cover.png",
-                "https://hampersmalang.web.id/assets/gift-set-powerbank-pen.png",
-                "https://hampersmalang.web.id/assets/tumbler-suhu-digital-grafir.png"
+                "https://hampersmalang.web.id/assets/souvenir-promosi-doktor-cover.webp",
+                "https://hampersmalang.web.id/assets/gift-set-powerbank-pen.webp",
+                "https://hampersmalang.web.id/assets/tumbler-suhu-digital-grafir.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -42,7 +42,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-02",
@@ -268,7 +268,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -318,7 +318,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/souvenir-promosi-doktor-cover.png"
+                        <img src="assets/souvenir-promosi-doktor-cover.webp"
                             alt="Gift Set Souvenir Promosi Doktor Elegan"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
@@ -369,7 +369,7 @@
                     </ul>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/gift-set-powerbank-pen.png"
+                        <img src="assets/gift-set-powerbank-pen.webp"
                             alt="Gift Set Powerbank dan Pulpen Parker dalam Box Eksklusif"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
@@ -381,8 +381,8 @@
                     <h2>2. Tumbler Suhu Digital (Smart LED) Grafir Nama</h2>
                     <p>
                         Tumbler ini memiliki sensor suhu di tutupnya. Sangat populer karena terlihat futuristik namun
-                        harganya sangat masuk akal. Nilai tambahnya ada pada <a
-                            href="cetak-logo-custom-satuan-grosir" style="color: #4338ca; font-weight: 600;">Grafir
+                        harganya sangat masuk akal. Nilai tambahnya ada pada <a href="cetak-logo-custom-satuan-grosir"
+                            style="color: #4338ca; font-weight: 600;">Grafir
                             Laser Nama</a> masing-masing penguji.
                     </p>
                     <p>
@@ -391,7 +391,7 @@
                     </p>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/tumbler-suhu-digital-grafir.png"
+                        <img src="assets/tumbler-suhu-digital-grafir.webp"
                             alt="Tumbler Suhu LED dengan Grafir Nama Profesor"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
@@ -505,7 +505,7 @@
                             <div
                                 style="background: white; border: 2px solid #4338ca; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/souvenir-promosi-doktor-cover.png"
+                                    <img src="assets/souvenir-promosi-doktor-cover.webp"
                                         alt="Konsultasi Souvenir Akademik"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
@@ -537,7 +537,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -577,8 +577,8 @@
                                             class="fa-solid fa-book-open"></i> Agenda Kulit</a></li>
                                 <li class="cat-item"><a href="category-drinkware"><i class="fa-solid fa-flask"></i>
                                         Tumbler Grafir</a></li>
-                                <li class="cat-item"><a href="pulpen-promosi-custom"><i
-                                            class="fa-solid fa-pen-nib"></i> Pulpen Metal</a></li>
+                                <li class="cat-item"><a href="pulpen-promosi-custom"><i class="fa-solid fa-pen-nib"></i>
+                                        Pulpen Metal</a></li>
                             </ul>
                         </div>
 
@@ -588,7 +588,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/merchandise-kantor-eksklusif.png"
+                                <img src="assets/merchandise-kantor-eksklusif.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Merchandise Eksklusif">
                                 <div>
@@ -605,8 +605,8 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/buku-agenda-notebook.png"
-                                    onerror="this.src='assets/executive-leather.png'"
+                                <img src="assets/buku-agenda-notebook.webp"
+                                    onerror="this.src='assets/executive-leather.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Notebook Kulit">
                                 <div>
@@ -623,7 +623,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/cetak-logo-custom-satuan-grosir.png"
+                                <img src="assets/cetak-logo-custom-satuan-grosir.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Teknik Grafir">
                                 <div>
@@ -774,5 +774,3 @@
 </body>
 
 </html>
-
-
