--- a/souvenir-ramah-lingkungan.html
+++ b/souvenir-ramah-lingkungan.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/souvenir-ramah-lingkungan">
     <title>Koleksi Souvenir Kantor Ramah Lingkungan (Sustainable Gifts) | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat Souvenir Ramah Lingkungan (Eco-Friendly) di Surabaya. Tumbler Bambu, Buku Daur Ulang, dan Tas Kanvas. Solusi Green Marketing & ESG Corporate.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Sustainable Gifts: Tunjukkan Peduli Bumi dengan Souvenir Kantor">
     <meta property="og:description"
         content="Saatnya beralih ke souvenir yang berdampak positif. Kurangi plastik, pilih Bambu & Daur Ulang. Tingkatkan citra perusahaan hijau Anda.">
-    <meta property="og:image" content="assets/souvenir-ramah-lingkungan.png">
+    <meta property="og:image" content="assets/souvenir-ramah-lingkungan.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/souvenir-ramah-lingkungan">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Koleksi Souvenir Kantor Ramah Lingkungan (Sustainable Gifts)",
             "image": [
-                "https://hampersmalang.web.id/assets/souvenir-ramah-lingkungan.png",
-                "https://hampersmalang.web.id/assets/cat-eco.png"
+                "https://hampersmalang.web.id/assets/souvenir-ramah-lingkungan.webp",
+                "https://hampersmalang.web.id/assets/cat-eco.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-01",
@@ -273,7 +273,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -321,7 +321,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/souvenir-ramah-lingkungan.png"
+                        <img src="assets/souvenir-ramah-lingkungan.webp"
                             alt="Koleksi Souvenir Eco Friendly: Tumbler Bambu, Notebook Daur Ulang, dan Tas Kanvas"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
@@ -400,7 +400,7 @@
                     </p>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/eco-bamboo.png" alt="Detail Grafir Laser pada Tumbler Bambu"
+                        <img src="assets/eco-bamboo.webp" alt="Detail Grafir Laser pada Tumbler Bambu"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Presisi laser engraving pada permukaan bambu menciptakan tekstur yang mewah dan tahan lama.
@@ -538,7 +538,7 @@
                             <div
                                 style="background: white; border: 2px solid #16A34A; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/souvenir-ramah-lingkungan.png" alt="Promo Souvenir ESG"
+                                    <img src="assets/souvenir-ramah-lingkungan.webp" alt="Promo Souvenir ESG"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(20, 83, 45, 0.8));">
@@ -569,7 +569,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -605,10 +605,10 @@
                             <ul class="cat-list">
                                 <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-leaf"></i>
                                         Katalog Eco-Green</a></li>
-                                <li class="cat-item"><a href="category-drinkware"><i
-                                            class="fa-solid fa-mug-hot"></i> Drinkware</a></li>
-                                <li class="cat-item"><a href="tas-goodie-bag"><i
-                                            class="fa-solid fa-bag-shopping"></i> Goodie Bag Kanvas</a></li>
+                                <li class="cat-item"><a href="category-drinkware"><i class="fa-solid fa-mug-hot"></i>
+                                        Drinkware</a></li>
+                                <li class="cat-item"><a href="tas-goodie-bag"><i class="fa-solid fa-bag-shopping"></i>
+                                        Goodie Bag Kanvas</a></li>
                             </ul>
                         </div>
 
@@ -618,7 +618,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/katalog-goodie-bag.png"
+                                <img src="assets/katalog-goodie-bag.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Tas Kanvas">
                                 <div>
@@ -636,7 +636,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/eco-notebook.png"
+                                <img src="assets/eco-notebook.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Notebook Daur Ulang">
                                 <div>
@@ -653,7 +653,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/konveksi-seragam-kaos.png"
+                                <img src="assets/konveksi-seragam-kaos.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Kaos Katun">
                                 <div>
@@ -670,7 +670,7 @@
 
                             <!-- Item 4 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/jaket-hoodie-kantor.png"
+                                <img src="assets/jaket-hoodie-kantor.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Jaket Kantor">
                                 <div>
@@ -688,7 +688,7 @@
 
                             <!-- Item 5 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/tas-belacu-goni.png"
+                                <img src="assets/tas-belacu-goni.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Tas Karung Goni">
                                 <div>
@@ -838,5 +838,3 @@
 </body>
 
 </html>
-
-
