--- a/souvenir-reuni-alumni.html
+++ b/souvenir-reuni-alumni.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/souvenir-reuni-alumni">
     <title>Souvenir Reuni Akbar & Merchandise Alumni (Polo, Payung, Mug) | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat pembuatan souvenir reuni alumni sekolah dan universitas. Kaos Polo Shirt Bordir, Payung Golf, dan Mug Kenangan. Kualitas premium untuk mengenang masa lalu.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Souvenir Reuni Akbar: Hidupkan Kembali Kenangan Manis Kampus">
     <meta property="og:description"
         content="Ide merchandise reuni yang memorable: Polo Shirt seragam angkatan, Payung Golf eksklusif, dan Mug nostalgia.">
-    <meta property="og:image" content="assets/souvenir-reuni-alumni.png">
+    <meta property="og:image" content="assets/souvenir-reuni-alumni.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/souvenir-reuni-alumni">
     <meta property="og:type" content="article">
 
@@ -29,9 +29,9 @@
             "@type": "Article",
             "headline": "Souvenir Reuni Akbar & Merchandise Alumni: Kenangan Tak Terlupakan",
             "image": [
-                "https://hampersmalang.web.id/assets/souvenir-reuni-alumni.png",
-                "https://hampersmalang.web.id/assets/kaos-reuni-bordir.png",
-                "https://hampersmalang.web.id/assets/payung-golf-reuni.png"
+                "https://hampersmalang.web.id/assets/souvenir-reuni-alumni.webp",
+                "https://hampersmalang.web.id/assets/kaos-reuni-bordir.webp",
+                "https://hampersmalang.web.id/assets/payung-golf-reuni.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -42,7 +42,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-02",
@@ -275,7 +275,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -324,7 +324,8 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/souvenir-reuni-alumni.png" alt="Suasana Reuni Alumni dengan Seragam Polo Shirt"
+                        <img src="assets/souvenir-reuni-alumni.webp"
+                            alt="Suasana Reuni Alumni dengan Seragam Polo Shirt"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
                             Reuni bukan sekadar bertemu, tapi merayakan perjalanan hidup bersama sahabat lama. (Sumber:
@@ -371,7 +372,7 @@
                     </p>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/kaos-reuni-bordir.png" alt="Detail Bordir Logo Alumni pada Kain Polo Lacoste"
+                        <img src="assets/kaos-reuni-bordir.webp" alt="Detail Bordir Logo Alumni pada Kain Polo Lacoste"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Detail bordir komputer yang rapi menunjukkan kualitas dan keseriusan panitia.
@@ -390,7 +391,7 @@
                     </p>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/payung-golf-reuni.png"
+                        <img src="assets/payung-golf-reuni.webp"
                             alt="Payung Golf Logo Universitas dan Mug Keramik Nostalgia"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
@@ -429,13 +430,13 @@
                         <h4 style="margin-top: 0; color: #14532d; margin-bottom: 1rem;">Lengkapkan Ekosistem Kampus:
                         </h4>
                         <ul style="margin-bottom: 0;">
-                            <li><a href="souvenir-kampus-universitas"
-                                    style="color: #15803d; font-weight: 600;">Kembali ke Halaman Utama Kampus</a></li>
+                            <li><a href="souvenir-kampus-universitas" style="color: #15803d; font-weight: 600;">Kembali
+                                    ke Halaman Utama Kampus</a></li>
                             <li><a href="souvenir-promosi-doktor-guru-besar"
                                     style="color: #15803d; font-weight: 600;">Hadiah Untuk Dosen/Guru Besar Favorit</a>
                             </li>
-                            <li><a href="merchandise-mahasiswa-baru"
-                                    style="color: #15803d; font-weight: 600;">Lihat Merchandise Generasi Baru</a></li>
+                            <li><a href="merchandise-mahasiswa-baru" style="color: #15803d; font-weight: 600;">Lihat
+                                    Merchandise Generasi Baru</a></li>
                         </ul>
                     </div>
 
@@ -521,7 +522,7 @@
                             <div
                                 style="background: white; border: 2px solid #15803d; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/souvenir-reuni-alumni.png" alt="Pesan Kaos Reuni"
+                                    <img src="assets/souvenir-reuni-alumni.webp" alt="Pesan Kaos Reuni"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(21, 128, 61, 0.9));">
@@ -552,7 +553,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -588,10 +589,10 @@
                             <ul class="cat-list">
                                 <li class="cat-item"><a href="category-tote-bag"><i
                                             class="fa-solid fa-bag-shopping"></i> Goodie Bag</a></li>
-                                <li class="cat-item"><a href="category-drinkware"><i
-                                            class="fa-solid fa-mug-hot"></i> Mug & Tumbler</a></li>
-                                <li class="cat-item"><a href="category-umbrella"><i
-                                            class="fa-solid fa-umbrella"></i> Payung Promosi</a></li>
+                                <li class="cat-item"><a href="category-drinkware"><i class="fa-solid fa-mug-hot"></i>
+                                        Mug & Tumbler</a></li>
+                                <li class="cat-item"><a href="category-umbrella"><i class="fa-solid fa-umbrella"></i>
+                                        Payung Promosi</a></li>
                                 <li class="cat-item"><a href="category-gift-set"><i class="fa-solid fa-gift"></i>
                                         Gift Set Premium</a></li>
                             </ul>
@@ -603,7 +604,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/souvenir-kampus-universitas.png"
+                                <img src="assets/souvenir-kampus-universitas.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Souvenir Kampus">
                                 <div>
@@ -620,8 +621,8 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/souvenir-promosi-doktor-guru-besar.png"
-                                    onerror="this.src='assets/corporate-gift.png'"
+                                <img src="assets/souvenir-promosi-doktor-guru-besar.webp"
+                                    onerror="this.src='assets/corporate-gift.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Doktor Premium">
                                 <div>
@@ -638,8 +639,8 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/souvenir-ospek-mahasiswa-baru.png"
-                                    onerror="this.src='assets/souvenir-wisuda-premium.png'"
+                                <img src="assets/souvenir-ospek-mahasiswa-baru.webp"
+                                    onerror="this.src='assets/souvenir-wisuda-premium.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Mahasiswa Baru">
                                 <div>
@@ -789,5 +790,3 @@
 </body>
 
 </html>
-
-
