--- a/souvenir-rups-saham.html
+++ b/souvenir-rups-saham.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/souvenir-rups-saham">
     <title>Souvenir RUPS Saham & IPO: Merchandise Eksklusif untuk Investor | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Rekomendasi souvenir Rapat Umum Pemegang Saham (RUPS) dan IPO yang elegan. Pilihan gift set premium untuk dewan direksi dan investor.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Souvenir RUPS Saham: Simbol Stabilitas dan Prestise Perusahaan">
     <meta property="og:description"
         content="Jangan sampai salah pilih bingkisan untuk pemegang saham. Temukan standar merchandise korporat level tinggi di sini.">
-    <meta property="og:image" content="assets/souvenir-rups-saham.png">
+    <meta property="og:image" content="assets/souvenir-rups-saham.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/souvenir-rups-saham">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Souvenir RUPS Saham: Menjaga Citra Perusahaan di Mata Investor",
             "image": [
-                "https://hampersmalang.web.id/assets/souvenir-rups-saham.png",
-                "https://hampersmalang.web.id/assets/souvenir-gadget-elektronik.png"
+                "https://hampersmalang.web.id/assets/souvenir-rups-saham.webp",
+                "https://hampersmalang.web.id/assets/souvenir-gadget-elektronik.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-02",
@@ -274,7 +274,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -325,7 +325,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/souvenir-rups-saham.png"
+                        <img src="assets/souvenir-rups-saham.webp"
                             alt="Gift Set RUPS Premium dalam Hardbox Hitam Eksklusif"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
@@ -396,7 +396,7 @@
                     </p>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/leather-clutch-meeting.png" alt="Clutch Bag Kulit untuk Dokumen Meeting"
+                        <img src="assets/leather-clutch-meeting.webp" alt="Clutch Bag Kulit untuk Dokumen Meeting"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Clutch bag sangat fungsional untuk membawa dokumen reksadana atau tablet saat meeting.
@@ -415,7 +415,7 @@
                     </ul>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/souvenir-gadget-elektronik.png"
+                        <img src="assets/souvenir-gadget-elektronik.webp"
                             alt="Set Souvenir Gadget Elektronik Hitam Matte"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
@@ -454,8 +454,8 @@
                             <li><a href="souvenir-promosi-doktor-guru-besar"
                                     style="color: #4338ca; font-weight: 600;">Souvenir Promosi Doktor (Akademik)</a>
                             </li>
-                            <li><a href="onboarding-kit-karyawan"
-                                    style="color: #4338ca; font-weight: 600;">Onboarding Kit Karyawan</a></li>
+                            <li><a href="onboarding-kit-karyawan" style="color: #4338ca; font-weight: 600;">Onboarding
+                                    Kit Karyawan</a></li>
                             <li><a href="souvenir-akhir-tahun-kalender"
                                     style="color: #4338ca; font-weight: 600;">Souvenir Kalender Akhir Tahun</a></li>
                         </ul>
@@ -538,7 +538,7 @@
                             <div
                                 style="background: white; border: 2px solid #1e1b4b; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/souvenir-rups-saham.png" alt="Pesan Souvenir RUPS"
+                                    <img src="assets/souvenir-rups-saham.webp" alt="Pesan Souvenir RUPS"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(30, 27, 75, 0.9));">
@@ -569,7 +569,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -607,10 +607,10 @@
                                         Premium Gift Set</a></li>
                                 <li class="cat-item"><a href="category-gadget"><i
                                             class="fa-solid fa-laptop-medical"></i> Corporate Gadget</a></li>
-                                <li class="cat-item"><a href="category-seminar"><i
-                                            class="fa-solid fa-briefcase"></i> Seminar Kit VIP</a></li>
-                                <li class="cat-item"><a href="buku-agenda-kerja"><i
-                                            class="fa-solid fa-book-open"></i> Agenda Hardcover</a></li>
+                                <li class="cat-item"><a href="category-seminar"><i class="fa-solid fa-briefcase"></i>
+                                        Seminar Kit VIP</a></li>
+                                <li class="cat-item"><a href="buku-agenda-kerja"><i class="fa-solid fa-book-open"></i>
+                                        Agenda Hardcover</a></li>
                             </ul>
                         </div>
 
@@ -620,7 +620,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/katalog-event-perusahaan.png"
+                                <img src="assets/katalog-event-perusahaan.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Event Guide">
                                 <div>
@@ -637,8 +637,8 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/souvenir-promosi-doktor-guru-besar.png"
-                                    onerror="this.src='assets/corporate-gift.png'"
+                                <img src="assets/souvenir-promosi-doktor-guru-besar.webp"
+                                    onerror="this.src='assets/corporate-gift.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Promosi Doktor">
                                 <div>
@@ -655,7 +655,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/souvenir-kalender-agenda-tahun-baru.png"
+                                <img src="assets/souvenir-kalender-agenda-tahun-baru.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Akhir Tahun">
                                 <div>
@@ -805,5 +805,3 @@
 </body>
 
 </html>
-
-
