--- a/speaker-bluetooth-custom-logo.html
+++ b/speaker-bluetooth-custom-logo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/speaker-bluetooth-custom-logo">
     <title>Speaker Bluetooth Mini: Souvenir Unik untuk Klien Milenial | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Cari souvenir kantor yang tidak membosankan? Speaker Bluetooth Mini dengan fitur Light Up Logo adalah pilihan tepat untuk memikat hati klien Milenial dan Gen Z.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Speaker Bluetooth Mini: Souvenir Unik untuk Klien Milenial">
     <meta property="og:description"
         content="Hadiah yang menyenangkan dan pasti dipakai. Suara jernih dengan logo perusahaan Anda yang menyala (Light up logo).">
-    <meta property="og:image" content="assets/gadget-speaker.png">
+    <meta property="og:image" content="assets/gadget-speaker.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/speaker-bluetooth-custom-logo">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Speaker Bluetooth Mini: Souvenir Unik & Hits untuk Target Pasar Milenial",
             "image": [
-                "https://hampersmalang.web.id/assets/gadget-speaker.png",
-                "https://hampersmalang.web.id/assets/lifestyle-umbrella.png"
+                "https://hampersmalang.web.id/assets/gadget-speaker.webp",
+                "https://hampersmalang.web.id/assets/lifestyle-umbrella.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-01",
@@ -264,7 +264,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -310,7 +310,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/gadget-speaker.png" alt="Speaker Bluetooth Custom Logo Menyala"
+                        <img src="assets/gadget-speaker.webp" alt="Speaker Bluetooth Custom Logo Menyala"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
                             Speaker mini dengan desain elegan dan logo yang bisa menyala (Light Up) menciptakan kesan
@@ -377,7 +377,7 @@
 
                     <!-- Supporting Image 1 -->
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/gadget-desk.png" alt="Setup Meja Kerja Estetik"
+                        <img src="assets/gadget-desk.webp" alt="Setup Meja Kerja Estetik"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Speaker mini sangat cocok untuk melengkapi setup meja kerja minimalis "Work From Anywhere".
@@ -385,8 +385,7 @@
                     </figure>
 
                     <div style="background: #F0FDF4; padding: 1.5rem; border-left: 4px solid #16A34A; margin: 2rem 0;">
-                        <strong>Perfect Pairing:</strong> Kombinasikan speaker dengan <a
-                            href="desk-accessories-custom"
+                        <strong>Perfect Pairing:</strong> Kombinasikan speaker dengan <a href="desk-accessories-custom"
                             style="color: #15803D; font-weight: 700; text-decoration: underline;">Mousepad Custom &
                             Phone Holder</a> untuk menciptakan paket "Ultimate Desk Setup" bagi klien Anda.
                     </div>
@@ -434,7 +433,7 @@
 
                     <!-- Supporting Image 2 -->
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/lifestyle-umbrella.png" alt="Barang Lifestyle Lainnya"
+                        <img src="assets/lifestyle-umbrella.webp" alt="Barang Lifestyle Lainnya"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Kombinasikan gadget dengan item lifestyle lain seperti payung lipat untuk paket hadiah yang
@@ -526,7 +525,7 @@
                             <div
                                 style="background: white; border: 2px solid var(--accent); border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/gadget-speaker.png" alt="Promo Speaker Bluetooth"
+                                    <img src="assets/gadget-speaker.webp" alt="Promo Speaker Bluetooth"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(0,0,0,0.6));">
@@ -559,7 +558,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -593,8 +592,8 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-gadget"><i
-                                            class="fa-solid fa-headphones"></i> Speaker & Audio</a></li>
+                                <li class="cat-item"><a href="category-gadget"><i class="fa-solid fa-headphones"></i>
+                                        Speaker & Audio</a></li>
                                 <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-gift"></i>
                                         Premium Gifts</a></li>
                                 <li class="cat-item"><a href="category-lifestyle"><i
@@ -609,7 +608,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: center;">
-                                <img src="assets/gadget-flashdisk.png"
+                                <img src="assets/gadget-flashdisk.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Flashdisk Kartu">
                                 <div>
@@ -624,7 +623,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: center;">
-                                <img src="assets/gadget-powerbank.png"
+                                <img src="assets/gadget-powerbank.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Powerbank">
                                 <div>
@@ -637,7 +636,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; align-items: center;">
-                                <img src="assets/eco-bamboo.png"
+                                <img src="assets/eco-bamboo.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Eco Bamboo">
                                 <div>
@@ -782,5 +781,3 @@
 </body>
 
 </html>
-
-
