--- a/tas-goodie-bag.html
+++ b/tas-goodie-bag.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/tas-goodie-bag">
     <title>Katalog Goodie Bag Promosi: Spunbond, Blacu & Kanvas | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat pembuatan Tas Goodie Bag custom di Surabaya. Tersedia bahan Spunbond murah, Blacu estetik, dan Kanvas premium untuk seminar, belanja, dan event. Sablon logo kilat.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Katalog Goodie Bag: Solusi Packaging Ramah Lingkungan">
     <meta property="og:description"
         content="Tinggalkan kantong plastik! Beralihlah ke Tas Spunbond dan Tote Bag Kanvas yang awet dan efektif sebagai media branding berjalan.">
-    <meta property="og:image" content="assets/katalog-goodie-bag.png">
+    <meta property="og:image" content="assets/katalog-goodie-bag.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/tas-goodie-bag">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Katalog Goodie Bag Promosi: Spunbond, Blacu & Kanvas Custom",
             "image": [
-                "https://hampersmalang.web.id/assets/katalog-goodie-bag.png",
-                "https://hampersmalang.web.id/assets/eco-bag.png"
+                "https://hampersmalang.web.id/assets/katalog-goodie-bag.webp",
+                "https://hampersmalang.web.id/assets/eco-bag.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-01",
@@ -270,7 +270,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -316,7 +316,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/katalog-goodie-bag.png" alt="Katalog Tas Goodie Bag Lengkap"
+                        <img src="assets/katalog-goodie-bag.webp" alt="Katalog Tas Goodie Bag Lengkap"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
                             Beragam pilihan tas dari yang ekonomis (Spunbond) hingga premium (Kanvas) untuk kebutuhan
@@ -395,7 +395,7 @@
 
                     <!-- Supporting Image 1 -->
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/eco-bag.png" alt="Tote Bag Blacu dan Kanvas"
+                        <img src="assets/eco-bag.webp" alt="Tote Bag Blacu dan Kanvas"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Tote Bag berbahan kain (Blacu/Kanvas) memiliki nilai guna jangka panjang yang tinggi.
@@ -512,7 +512,7 @@
                             <div
                                 style="background: white; border: 2px solid var(--accent); border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/katalog-goodie-bag.png" alt="Promo Goodie Bag"
+                                    <img src="assets/katalog-goodie-bag.webp" alt="Promo Goodie Bag"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(0,0,0,0.6));">
@@ -544,7 +544,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -582,8 +582,8 @@
                                         Eco Friendly</a></li>
                                 <li class="cat-item"><a href="tas-seminar-laptop-vs-ransel"><i
                                             class="fa-solid fa-laptop"></i> Tas Laptop</a></li>
-                                <li class="cat-item"><a href="konveksi-seragam-kaos"><i
-                                            class="fa-solid fa-shirt"></i> Konveksi Apparel</a></li>
+                                <li class="cat-item"><a href="konveksi-seragam-kaos"><i class="fa-solid fa-shirt"></i>
+                                        Konveksi Apparel</a></li>
                             </ul>
                         </div>
 
@@ -593,7 +593,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/eco-bag.png"
+                                <img src="assets/eco-bag.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Tas Ramah Lingkungan">
                                 <div>
@@ -611,7 +611,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/konveksi-seragam-kaos.png"
+                                <img src="assets/konveksi-seragam-kaos.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Konveksi">
                                 <div>
@@ -628,7 +628,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/gadget-flashdisk.png"
+                                <img src="assets/gadget-flashdisk.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Flashdisk">
                                 <div>
@@ -779,5 +779,3 @@
 </body>
 
 </html>
-
-
