--- a/topi-promosi-custom.html
+++ b/topi-promosi-custom.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/topi-promosi-custom">
     <title>Topi Promosi Custom: Trucker & Baseball Caps Bordir 3D | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Vendor pembuatan Topi Trucker Jaring dan Topi Baseball Custom Bordir 3D di Surabaya. Pilihan bahan royal drill, rafel denim, dan canvas. Cocok untuk merchandise event & komunitas.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Topi Promosi Custom: Iklan Berjalan di Kepala Klien Anda">
     <meta property="og:description"
         content="Lengkapi seragam lapangan Anda dengan Topi Custom. Simak perbedaan bahan Rafel vs Drill dan jenis bordir yang awet disini.">
-    <meta property="og:image" content="assets/topi-promosi.png">
+    <meta property="og:image" content="assets/topi-promosi.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/topi-promosi-custom">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Topi Promosi Custom: Branding Efektif dengan Biaya Terjangkau",
             "image": [
-                "https://hampersmalang.web.id/assets/topi-promosi.png",
-                "https://hampersmalang.web.id/assets/lifestyle-apparel.png"
+                "https://hampersmalang.web.id/assets/topi-promosi.webp",
+                "https://hampersmalang.web.id/assets/lifestyle-apparel.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-01",
@@ -270,7 +270,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -316,7 +316,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/topi-promosi.png"
+                        <img src="assets/topi-promosi.webp"
                             alt="Perbandingan Topi Baseball Navy dan Topi Trucker Jaring Hitam Putih"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
@@ -395,7 +395,7 @@
 
                     <!-- Supporting Image 1 -->
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/lifestyle-apparel.png" alt="Koleksi Apparel Lengkap"
+                        <img src="assets/lifestyle-apparel.webp" alt="Koleksi Apparel Lengkap"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Selain topi, kami juga memproduksi jaket dan kaos untuk melengkapi seragam lapangan Anda.
@@ -512,7 +512,7 @@
                             <div
                                 style="background: white; border: 2px solid var(--accent); border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/topi-promosi.png" alt="Promo Topi Event"
+                                    <img src="assets/topi-promosi.webp" alt="Promo Topi Event"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(0,0,0,0.6));">
@@ -544,7 +544,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -579,12 +579,12 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Pelengkap Event</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="konveksi-seragam-kaos"><i
-                                            class="fa-solid fa-shirt"></i> Konveksi Kaos</a></li>
+                                <li class="cat-item"><a href="konveksi-seragam-kaos"><i class="fa-solid fa-shirt"></i>
+                                        Konveksi Kaos</a></li>
                                 <li class="cat-item"><a href="jaket-hoodie-kantor"><i class="fa-solid fa-vest"></i>
                                         Jaket Komunitas</a></li>
-                                <li class="cat-item"><a href="tas-goodie-bag"><i
-                                            class="fa-solid fa-bag-shopping"></i> Tas Goodie Bag</a></li>
+                                <li class="cat-item"><a href="tas-goodie-bag"><i class="fa-solid fa-bag-shopping"></i>
+                                        Tas Goodie Bag</a></li>
                             </ul>
                         </div>
 
@@ -594,7 +594,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/jaket-hoodie-kantor.png"
+                                <img src="assets/jaket-hoodie-kantor.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Jaket Kantor">
                                 <div>
@@ -611,7 +611,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/kaos-polo-bordir.png"
+                                <img src="assets/kaos-polo-bordir.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Polo Shirt">
                                 <div>
@@ -628,7 +628,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/konveksi-seragam-kaos.png"
+                                <img src="assets/konveksi-seragam-kaos.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Konveksi">
                                 <div>
@@ -778,5 +778,3 @@
 </body>
 
 </html>
-
-
