--- a/tumbler-bambu-grafir.html
+++ b/tumbler-bambu-grafir.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/tumbler-bambu-grafir">
     <title>Tumbler Bambu Estetik & Unik: Souvenir Eco-Green Kekinian | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Tumbler Bambu Stainless dengan grafir nama/logo yang estetik. Pilihan souvenir ramah lingkungan (eco-friendly) paling populer untuk citra perusahaan yang positif.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Tumbler Bambu Estetik & Unik: Souvenir Eco-Green Kekinian">
     <meta property="og:description"
         content="Tunjukkan kepedulian lingkungan Anda dengan souvenir Tumbler Bambu. Desain natural, jeroan stainless tahan panas, dan grafir logo yang abadi.">
-    <meta property="og:image" content="assets/eco-bamboo.png">
+    <meta property="og:image" content="assets/eco-bamboo.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/tumbler-bambu-grafir">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Tumbler Bambu: Kombinasi Estetika Alam dan Teknologi Stainless",
             "image": [
-                "https://hampersmalang.web.id/assets/eco-bamboo.png",
-                "https://hampersmalang.web.id/assets/eco-bag.png"
+                "https://hampersmalang.web.id/assets/eco-bamboo.webp",
+                "https://hampersmalang.web.id/assets/eco-bag.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-01",
@@ -264,7 +264,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -310,7 +310,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/eco-bamboo.png" alt="Tumbler Bambu Grafir Nama"
+                        <img src="assets/eco-bamboo.webp" alt="Tumbler Bambu Grafir Nama"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
                             Serat bambu alami memberikan sentuhan personal yang unik pada setiap tumbler, menjadikannya
@@ -382,7 +382,7 @@
 
                     <!-- Supporting Image 1 -->
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/eco-bag.png" alt="Tas Ramah Lingkungan"
+                        <img src="assets/eco-bag.webp" alt="Tas Ramah Lingkungan"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Padukan tumbler bambu dengan tas spunbond/kanvas untuk paket seminar Eco-Friendly yang
@@ -442,7 +442,7 @@
 
                     <!-- Supporting Image 2 -->
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/eco-notebook.png" alt="Notebook Daur Ulang"
+                        <img src="assets/eco-notebook.webp" alt="Notebook Daur Ulang"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Buku catatan dari kertas daur ulang adalah pasangan serasi untuk tumbler bambu.
@@ -523,7 +523,7 @@
                             <div
                                 style="background: white; border: 2px solid var(--accent); border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/eco-bamboo.png" alt="Promo Tumbler Bambu"
+                                    <img src="assets/eco-bamboo.webp" alt="Promo Tumbler Bambu"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(0,0,0,0.6));">
@@ -556,7 +556,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -592,8 +592,8 @@
                             <ul class="cat-list">
                                 <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-tree"></i> Eco
                                         Souvenir</a></li>
-                                <li class="cat-item"><a href="category-drinkware"><i
-                                            class="fa-solid fa-mug-hot"></i> Drinkware</a></li>
+                                <li class="cat-item"><a href="category-drinkware"><i class="fa-solid fa-mug-hot"></i>
+                                        Drinkware</a></li>
                                 <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-star"></i>
                                         Premium Gifts</a></li>
                             </ul>
@@ -605,7 +605,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: center;">
-                                <img src="assets/express-tumbler.png"
+                                <img src="assets/express-tumbler.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Tumbler Murah">
                                 <div>
@@ -620,7 +620,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: center;">
-                                <img src="assets/drinkware-sport.png"
+                                <img src="assets/drinkware-sport.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Botol Sport">
                                 <div>
@@ -633,7 +633,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; align-items: center;">
-                                <img src="assets/gadget-speaker.png"
+                                <img src="assets/gadget-speaker.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Speaker">
                                 <div>
@@ -778,5 +778,3 @@
 </body>
 
 </html>
-
-
