--- a/tumbler-stainless-vacuum.html
+++ b/tumbler-stainless-vacuum.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/tumbler-stainless-vacuum">
     <title>Tumbler Stainless Steel Vacuum Custom - Souvenir Thermos Premium Tahan Panas</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat produksi Tumbler Stainless Vacuum (Thermos) custom logo. Teknologi Double Wall Insulation tahan panas hingga 12 jam. Bahan SUS 304 Food Grade. Garansi laser grafir permanen.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Tumbler Stainless Vacuum Custom - Souvenir Premium Tahan Panas">
     <meta property="og:description"
         content="Cetak logo perusahaan di tumbler stainless premium (Thermos). Tahan panas 12 jam, anti bocor, dan elegan.">
-    <meta property="og:image" content="assets/drinkware-thermos.png">
+    <meta property="og:image" content="assets/drinkware-thermos.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/tumbler-stainless-vacuum">
     <meta property="og:type" content="article">
 
@@ -28,7 +28,7 @@
       "@context": "https://schema.org",
       "@type": "Product",
       "name": "Tumbler Stainless Vacuum Custom",
-      "image": "https://hampersmalang.web.id/assets/drinkware-thermos.png",
+      "image": "https://hampersmalang.web.id/assets/drinkware-thermos.webp",
       "description": "Tumbler stainless steel dengan teknologi double wall vacuum insulation, mampu menahan suhu panas/dingin hingga 12 jam. Cocok untuk souvenir kantor premium.",
       "brand": {
         "@type": "Brand",
@@ -309,7 +309,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -354,7 +354,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2.5rem;">
-                        <img src="assets/drinkware-thermos.png" alt="Tumbler Stainless Vacuum Insulation"
+                        <img src="assets/drinkware-thermos.webp" alt="Tumbler Stainless Vacuum Insulation"
                             style="width: 100%; border-radius: 1rem; box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1);">
                         <figcaption style="font-size: 0.9rem; color: #64748B; text-align: center; margin-top: 0.75rem;">
                             Tumbler Stainless Vacuum Double Wall model Niagara yang elegan dan tahan panas 12 jam.
@@ -367,7 +367,8 @@
                         durabilitas tinggi (tahan banting), dan gengsi (kesan mewah) dalam satu paket.
                     </p>
 
-                    <p>Berbeda dengan botol plastik biasa, tumbler vacuumâ€”atau sering disebut <em>Thermos</em>â€”memiliki
+                    <p>Berbeda dengan botol plastik biasa, tumbler vacuumâ€”atau sering disebut
+                        <em>Thermos</em>â€”memiliki
                         teknologi isolasi yang canggih. Bukan sekadar wadah air, ia adalah alat yang menjaga kenyamanan
                         klien Anda dengan memastikan kopi pagi mereka tetap panas hingga jam makan siang. Artikel ini
                         akan mengupas tuntas mengapa tumbler stainless vacuum adalah investasi terbaik untuk branding
@@ -392,7 +393,7 @@
                         tersebut, udara disedot keluar hingga menciptakan ruang hampa (vacuum).</p>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/cat-drinkware.png" alt="Struktur Double Wall Vacuum"
+                        <img src="assets/cat-drinkware.webp" alt="Struktur Double Wall Vacuum"
                             style="width: 100%; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Ilustrasi lapisan dinding ganda yang mencegah perpindahan panas.
@@ -473,7 +474,7 @@
                     <p>Berikut adalah 3 model "Top Tier" yang paling sering dipesan oleh perusahaan multinasional:</p>
 
                     <h3>1. Tumbler Niagara (Kancing)</h3>
-                    <img src="assets/drinkware-thermos.png" alt="Tumbler Niagara Custom"
+                    <img src="assets/drinkware-thermos.webp" alt="Tumbler Niagara Custom"
                         style="width: 100%; border-radius: 8px; margin-bottom: 1rem;" loading="lazy">
                     <p>Desain paling klasik dengan tutup model kancing/clip yang praktis. Leher botol unik seperti botol
                         soda kaca memberikan grip yang nyaman. Sangat cocok untuk grafir logo vertikal di sisi samping.
@@ -512,7 +513,7 @@
                     </ul>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/executive-leather.png" alt="Hasil Grafir Laser Premium"
+                        <img src="assets/executive-leather.webp" alt="Hasil Grafir Laser Premium"
                             style="width: 100%; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Contoh hasil grafir laser yang presisi pada permukaan tumbler premium.
@@ -607,7 +608,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-section">
-                        <img src="assets/about-team.png" alt="Author" class="author-avatar" loading="lazy">
+                        <img src="assets/about-team.webp" alt="Author" class="author-avatar" loading="lazy">
                         <div>
                             <h4 style="margin-bottom: 0.25rem; font-weight: 800; font-size: 1.1rem;">Tim Produk Maroon
                                 Souvenir</h4>
@@ -646,10 +647,10 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Sering Dibeli Bersama</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-drinkware"><i
-                                            class="fa-solid fa-mug-hot"></i> Mug Keramik Custom</a></li>
-                                <li class="cat-item"><a href="category-seminar"><i
-                                            class="fa-solid fa-briefcase"></i> Paket Seminar Kit</a></li>
+                                <li class="cat-item"><a href="category-drinkware"><i class="fa-solid fa-mug-hot"></i>
+                                        Mug Keramik Custom</a></li>
+                                <li class="cat-item"><a href="category-seminar"><i class="fa-solid fa-briefcase"></i>
+                                        Paket Seminar Kit</a></li>
                                 <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-crown"></i>
                                         Gift Set Premium</a></li>
                             </ul>
@@ -661,7 +662,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: center;">
-                                <img src="assets/drinkware-thermos.png"
+                                <img src="assets/drinkware-thermos.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Tumbler Custom">
                                 <div>
@@ -676,7 +677,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: center;">
-                                <img src="assets/drinkware-sport.png"
+                                <img src="assets/drinkware-sport.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Botol Sport">
                                 <div>
@@ -689,7 +690,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; align-items: center;">
-                                <img src="assets/cat-executive.png"
+                                <img src="assets/cat-executive.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Tren 2026">
                                 <div>
@@ -841,5 +842,3 @@
 </body>
 
 </html>
-
-
