--- a/vendor-souvenir-kantor-jogja.html
+++ b/vendor-souvenir-kantor-jogja.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/vendor-souvenir-kantor-jogja">
     <title>Vendor Souvenir Kantor Jogja: Merchandise Unik & Berbudaya | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat Vendor Souvenir Kantor di Jogja (Yogyakarta). Spesialis seminar kit unik, souvenir wisuda, dan merchandise etnik untuk instansi dan kampus.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Vendor Souvenir Kantor Jogja: Merchandise Unik & Berbudaya">
     <meta property="og:description"
         content="Cari souvenir dengan sentuhan budaya Jogja? Temukan koleksi merchandise etnik dan seminar kit kreatif di sini.">
-    <meta property="og:image" content="assets/vendor-souvenir-jogja.png">
+    <meta property="og:image" content="assets/vendor-souvenir-jogja.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/vendor-souvenir-kantor-jogja">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Vendor Souvenir Kantor Jogja: Sentuhan Budaya dalam Merchandise Modern",
             "image": [
-                "https://hampersmalang.web.id/assets/vendor-souvenir-jogja.png",
-                "https://hampersmalang.web.id/assets/seminar-kit.png"
+                "https://hampersmalang.web.id/assets/vendor-souvenir-jogja.webp",
+                "https://hampersmalang.web.id/assets/seminar-kit.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-02",
@@ -274,7 +274,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -322,7 +322,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/vendor-souvenir-jogja.png"
+                        <img src="assets/vendor-souvenir-jogja.webp"
                             alt="Souvenir Etnik dengan Latar Belakang Tugu Jogja"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
@@ -392,7 +392,7 @@
                     </ul>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/tas-belacu-goni.png" alt="Tas Belacu Jogja"
+                        <img src="assets/tas-belacu-goni.webp" alt="Tas Belacu Jogja"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Tote bag bahan natural, simbol kesederhanaan yang elegan khas Jogja.
@@ -492,7 +492,7 @@
                             <div
                                 style="background: white; border: 2px solid #b45309; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/vendor-souvenir-jogja.png" alt="Promo Vendor Jogja"
+                                    <img src="assets/vendor-souvenir-jogja.webp" alt="Promo Vendor Jogja"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(180, 83, 9, 0.9));">
@@ -523,7 +523,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -572,7 +572,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/tas-belacu-goni.png"
+                                <img src="assets/tas-belacu-goni.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Tas Belacu">
                                 <div>
@@ -588,7 +588,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/vendor-souvenir-malang.png"
+                                <img src="assets/vendor-souvenir-malang.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Vendor Malang">
                                 <div>
@@ -605,7 +605,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/souvenir-ramah-lingkungan.png"
+                                <img src="assets/souvenir-ramah-lingkungan.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Eco">
                                 <div>
@@ -755,5 +755,3 @@
 </body>
 
 </html>
-
-
