--- a/vendor-souvenir-kantor-profesional.html
+++ b/vendor-souvenir-kantor-profesional.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/vendor-souvenir-kantor-profesional">
     <title>Vendor Souvenir Kantor Profesional: Mitra Branding Terpercaya | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Panduan memilih Vendor Souvenir Kantor Profesional di Indonesia. Tips mencari supplier corporate gifts yang amanah, tepat waktu, dan berkualitas premium untuk perusahaan Anda.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Vendor Souvenir Kantor Profesional: Kunci Sukses Branding Anda">
     <meta property="og:description"
         content="Jangan pertaruhkan citra perusahaan Anda dengan souvenir murahan. Simak ciri-ciri vendor souvenir profesional yang wajib Anda tahu sebelum deal.">
-    <meta property="og:image" content="assets/vendor-souvenir-kantor.png">
+    <meta property="og:image" content="assets/vendor-souvenir-kantor.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/vendor-souvenir-kantor-profesional">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Vendor Souvenir Kantor Profesional: Kunci Sukses Branding Perusahaan",
             "image": [
-                "https://hampersmalang.web.id/assets/vendor-souvenir-kantor.png",
-                "https://hampersmalang.web.id/assets/seminar-kit.png"
+                "https://hampersmalang.web.id/assets/vendor-souvenir-kantor.webp",
+                "https://hampersmalang.web.id/assets/seminar-kit.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-01",
@@ -273,7 +273,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -321,7 +321,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/vendor-souvenir-kantor.png" alt="Showroom Vendor Souvenir Kantor Profesional"
+                        <img src="assets/vendor-souvenir-kantor.webp" alt="Showroom Vendor Souvenir Kantor Profesional"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
                             Kualitas souvenir mencerminkan kredibilitas perusahaan Anda di mata klien. Pilih vendor yang
@@ -421,7 +421,7 @@
                     </p>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/seminar-kit.png" alt="Paket Souvenir Seminar Kit"
+                        <img src="assets/seminar-kit.webp" alt="Paket Souvenir Seminar Kit"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Konsistensi adalah kunci. Kami pastikan 1000 pcs sama kualitasnya dengan 1 pcs sampel.
@@ -521,7 +521,7 @@
                             <div
                                 style="background: white; border: 2px solid #0F172A; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/vendor-souvenir-kantor.png" alt="Promo Vendor Souvenir"
+                                    <img src="assets/vendor-souvenir-kantor.webp" alt="Promo Vendor Souvenir"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(15, 23, 42, 0.9));">
@@ -552,7 +552,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -590,8 +590,8 @@
                                             class="fa-solid fa-city"></i> Vendor Jakarta</a></li>
                                 <li class="cat-item"><a href="vendor-souvenir-kantor-surabaya"><i
                                             class="fa-solid fa-building"></i> Vendor Surabaya</a></li>
-                                <li class="cat-item"><a href="category-seminar"><i
-                                            class="fa-solid fa-box-open"></i> Seminar Kit</a></li>
+                                <li class="cat-item"><a href="category-seminar"><i class="fa-solid fa-box-open"></i>
+                                        Seminar Kit</a></li>
                             </ul>
                         </div>
 
@@ -601,7 +601,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/souvenir-ramah-lingkungan.png"
+                                <img src="assets/souvenir-ramah-lingkungan.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Sustainable Gifts">
                                 <div>
@@ -618,7 +618,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/seminar-basic.png"
+                                <img src="assets/seminar-basic.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Paket Seminar">
                                 <div>
@@ -635,7 +635,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/tas-belacu-goni.png"
+                                <img src="assets/tas-belacu-goni.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Tas Goni">
                                 <div>
@@ -785,5 +785,3 @@
 </body>
 
 </html>
-
-
