--- a/tas-belacu-goni.html
+++ b/tas-belacu-goni.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/tas-belacu-goni">
     <title>Tas Belacu & Karung Goni Custom: Souvenir Etnik yang Artsy | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Vendor Tas Tote Bag Belacu (Calico) dan Tas Goni (Jute) Custom di Surabaya. Pilihan kemasan souvenir ramah lingkungan dengan nuansa vintage dan rustic.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Tas Belacu & Goni: Sentuhan Vintage untuk Brand Modern">
     <meta property="og:description"
         content="Kembali ke alam dengan Tas Belacu krem yang klasik atau Tas Goni yang bertekstur kuat. Solusi packaging yang bisa dipakai berulang kali.">
-    <meta property="og:image" content="assets/tas-belacu-goni.png">
+    <meta property="og:image" content="assets/tas-belacu-goni.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/tas-belacu-goni">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Tas Belacu & Tas Goni: Pilihan Packaging Souvenir Bernuansa Etnik",
             "image": [
-                "https://hampersmalang.web.id/assets/tas-belacu-goni.png",
-                "https://hampersmalang.web.id/assets/souvenir-ramah-lingkungan.png"
+                "https://hampersmalang.web.id/assets/tas-belacu-goni.webp",
+                "https://hampersmalang.web.id/assets/souvenir-ramah-lingkungan.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-01",
@@ -277,7 +277,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -325,7 +325,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/tas-belacu-goni.png" alt="Tote Bag Belacu Krem dan Tas Goni Coklat Rustic"
+                        <img src="assets/tas-belacu-goni.webp" alt="Tote Bag Belacu Krem dan Tas Goni Coklat Rustic"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
                             Perpaduan estetika tradisional dan fungsi modern. Pilihan tepat untuk branding bernuansa
@@ -412,7 +412,7 @@
                     </ul>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/katalog-goodie-bag.png" alt="Berbagai Tas Promosi"
+                        <img src="assets/katalog-goodie-bag.webp" alt="Berbagai Tas Promosi"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Tentukan pilihan: Goni untuk kesan premium, Belacu untuk kesan vintage, atau Spunbond untuk
@@ -512,7 +512,7 @@
                             <div
                                 style="background: white; border: 2px solid #8B4513; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/tas-belacu-goni.png" alt="Promo Tas Goni Custom"
+                                    <img src="assets/tas-belacu-goni.webp" alt="Promo Tas Goni Custom"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(93, 64, 55, 0.8));">
@@ -543,7 +543,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -579,8 +579,8 @@
                             <ul class="cat-list">
                                 <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-leaf"></i> Eco
                                         Friendly</a></li>
-                                <li class="cat-item"><a href="tas-goodie-bag"><i
-                                            class="fa-solid fa-bag-shopping"></i> Goodie Bag</a></li>
+                                <li class="cat-item"><a href="tas-goodie-bag"><i class="fa-solid fa-bag-shopping"></i>
+                                        Goodie Bag</a></li>
                                 <li class="cat-item"><a href="category-seminar"><i class="fa-solid fa-box"></i>
                                         Seminar Kit</a></li>
                             </ul>
@@ -592,7 +592,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/souvenir-ramah-lingkungan.png"
+                                <img src="assets/souvenir-ramah-lingkungan.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Sustainable">
                                 <div>
@@ -609,7 +609,8 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/tas-goodie-bag.png" onerror="this.src='assets/katalog-goodie-bag.png'"
+                                <img src="assets/tas-goodie-bag.webp"
+                                    onerror="this.src='assets/katalog-goodie-bag.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Goodie Bag">
                                 <div>
@@ -626,7 +627,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/alat-makan-kayu.png"
+                                <img src="assets/alat-makan-kayu.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Alat Makan Kayu">
                                 <div>
@@ -776,5 +777,3 @@
 </body>
 
 </html>
-
-
