--- a/vendor-souvenir-kantor-jakarta.html
+++ b/vendor-souvenir-kantor-jakarta.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/vendor-souvenir-kantor-jakarta">
     <title>Vendor Souvenir Kantor Jakarta: Layanan Cepat & Premium | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Cari Vendor Souvenir Kantor di Jakarta? Kami melayani pembuatan seminar kit, corporate gifts, dan merchandise promosi area Jakarta Selatan, Pusat, dan sekitarnya. Bisa Rush Order.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Vendor Souvenir Kantor Jakarta: Solusi Cepat Kebutuhan Korporat">
     <meta property="og:description"
         content="Deadline mepet? Maroon Souvenir siap melayani kebutuhan merchandise kantor Anda di area Jabodetabek dengan kualitas premium.">
-    <meta property="og:image" content="assets/vendor-souvenir-jakarta.png">
+    <meta property="og:image" content="assets/vendor-souvenir-jakarta.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/vendor-souvenir-kantor-jakarta">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Vendor Souvenir Kantor Jakarta: Mitra Corporate Gift Terpercaya di Ibu Kota",
             "image": [
-                "https://hampersmalang.web.id/assets/vendor-souvenir-jakarta.png",
-                "https://hampersmalang.web.id/assets/seminar-kit.png"
+                "https://hampersmalang.web.id/assets/vendor-souvenir-jakarta.webp",
+                "https://hampersmalang.web.id/assets/seminar-kit.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-01",
@@ -276,7 +276,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -324,7 +324,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/vendor-souvenir-jakarta.png"
+                        <img src="assets/vendor-souvenir-jakarta.webp"
                             alt="Gift Set Souvenir Kantor dengan Latar Belakang Kota Jakarta"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
@@ -399,7 +399,7 @@
                     </ul>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/category-gadget.png" alt="Souvenir Gadget Elektronik"
+                        <img src="assets/category-gadget.webp" alt="Souvenir Gadget Elektronik"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Gadget canggih untuk gaya hidup metropolitan yang dinamis.
@@ -526,7 +526,7 @@
                             <div
                                 style="background: white; border: 2px solid #1e40af; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/vendor-souvenir-jakarta.png" alt="Promo Vendor Jakarta"
+                                    <img src="assets/vendor-souvenir-jakarta.webp" alt="Promo Vendor Jakarta"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(30, 58, 138, 0.9));">
@@ -557,7 +557,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -606,7 +606,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/vendor-souvenir-kantor.png"
+                                <img src="assets/vendor-souvenir-kantor.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Vendor Profesional">
                                 <div>
@@ -623,8 +623,8 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/souvenir-gadget-elektronik.png"
-                                    onerror="this.src='assets/category-gadget.png'"
+                                <img src="assets/souvenir-gadget-elektronik.webp"
+                                    onerror="this.src='assets/category-gadget.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Souvenir Gadget">
                                 <div>
@@ -641,7 +641,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/souvenir-ramah-lingkungan.png"
+                                <img src="assets/souvenir-ramah-lingkungan.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Souvenir Eco">
                                 <div>
@@ -791,5 +791,3 @@
 </body>
 
 </html>
-
-
