--- a/vendor-souvenir-kantor-malang.html
+++ b/vendor-souvenir-kantor-malang.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/vendor-souvenir-kantor-malang">
     <title>Vendor Souvenir Kantor Malang: Seminar Kit & Merchandise Kreatif | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat pembuatan souvenir kantor dan seminar kit di Malang & Batu. Solusi merchandise kreatif untuk kampus, hotel, dan instansi di area Malang Raya.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Vendor Souvenir Kantor Malang: Solusi Merchandise Kreatif Malang Raya">
     <meta property="og:description"
         content="Melayani kebutuhan seminar kit kampus dan souvenir hotel di Malang & Batu dengan sentuhan desain kreatif khas Arema.">
-    <meta property="og:image" content="assets/vendor-souvenir-malang.png">
+    <meta property="og:image" content="assets/vendor-souvenir-malang.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/vendor-souvenir-kantor-malang">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Vendor Souvenir Kantor Malang: Pusat Merchandise Kreatif di Kota Bunga",
             "image": [
-                "https://hampersmalang.web.id/assets/vendor-souvenir-malang.png",
-                "https://hampersmalang.web.id/assets/seminar-kit.png"
+                "https://hampersmalang.web.id/assets/vendor-souvenir-malang.webp",
+                "https://hampersmalang.web.id/assets/seminar-kit.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-02",
@@ -274,7 +274,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -322,7 +322,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/vendor-souvenir-malang.png"
+                        <img src="assets/vendor-souvenir-malang.webp"
                             alt="Souvenir Kreatif dengan Latar Belakang Tugu Malang"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
@@ -392,8 +392,8 @@
                     </ul>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/id-card-lanyard.png" alt="Lanyard Custom Malang"
-                            onerror="this.src='assets/seminar-basic.png'"
+                        <img src="assets/id-card-lanyard.webp" alt="Lanyard Custom Malang"
+                            onerror="this.src='assets/seminar-basic.webp'"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Lanyard printing berkualitas tajam, favorit mahasiswa dan event organizer Malang.
@@ -506,7 +506,7 @@
                             <div
                                 style="background: white; border: 2px solid #16a34a; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/vendor-souvenir-malang.png" alt="Promo Vendor Malang"
+                                    <img src="assets/vendor-souvenir-malang.webp" alt="Promo Vendor Malang"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(22, 163, 74, 0.9));">
@@ -537,7 +537,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -586,7 +586,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/category-seminar.png" onerror="this.src='assets/seminar-kit.png'"
+                                <img src="assets/category-seminar.webp" onerror="this.src='assets/seminar-kit.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Seminar Kit">
                                 <div>
@@ -602,7 +602,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/vendor-souvenir-surabaya.png"
+                                <img src="assets/vendor-souvenir-surabaya.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Vendor Surabaya">
                                 <div>
@@ -619,7 +619,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/alat-makan-kayu.png"
+                                <img src="assets/alat-makan-kayu.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Alat Makan Kayu">
                                 <div>
@@ -769,5 +769,3 @@
 </body>
 
 </html>
-
-
