--- a/vendor-souvenir-kantor-surabaya.html
+++ b/vendor-souvenir-kantor-surabaya.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/vendor-souvenir-kantor-surabaya">
     <title>Vendor Souvenir Kantor Surabaya: Pabrik Merchandise Terpercaya | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat Vendor Souvenir Kantor di Surabaya & Jawa Timur. Melayani pembuatan seminar kit, seragam kantor, dan gift set premium. Lokasi strategis, kirim cepat ke Indonesia Timur.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Vendor Souvenir Kantor Surabaya: Solusi Merchandise Korporat Jawa Timur">
     <meta property="og:description"
         content="Cari vendor souvenir di Surabaya? Maroon Souvenir hadir dengan workshop lokal untuk layanan lebih cepat dan efisien.">
-    <meta property="og:image" content="assets/vendor-souvenir-surabaya.png">
+    <meta property="og:image" content="assets/vendor-souvenir-surabaya.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/vendor-souvenir-kantor-surabaya">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Vendor Souvenir Kantor Surabaya: Mitra Merchandise Terbesar di Jawa Timur",
             "image": [
-                "https://hampersmalang.web.id/assets/vendor-souvenir-surabaya.png",
-                "https://hampersmalang.web.id/assets/seminar-kit.png"
+                "https://hampersmalang.web.id/assets/vendor-souvenir-surabaya.webp",
+                "https://hampersmalang.web.id/assets/seminar-kit.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-02",
@@ -275,7 +275,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -323,7 +323,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/vendor-souvenir-surabaya.png"
+                        <img src="assets/vendor-souvenir-surabaya.webp"
                             alt="Gift Set Souvenir Kantor Exclusive dengan Latar Jembatan Suramadu"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
@@ -394,7 +394,7 @@
                     </ul>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/jaket-hoodie-kantor.png" alt="Seragam Kantor Lapangan"
+                        <img src="assets/jaket-hoodie-kantor.webp" alt="Seragam Kantor Lapangan"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Solusi seragam dan safety wear untuk kebutuhan industri di Jawa Timur.
@@ -509,7 +509,7 @@
                             <div
                                 style="background: white; border: 2px solid #0d9488; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/vendor-souvenir-surabaya.png" alt="Promo Vendor Surabaya"
+                                    <img src="assets/vendor-souvenir-surabaya.webp" alt="Promo Vendor Surabaya"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(13, 148, 136, 0.9));">
@@ -540,7 +540,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -589,7 +589,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/category-seminar.png" onerror="this.src='assets/seminar-kit.png'"
+                                <img src="assets/category-seminar.webp" onerror="this.src='assets/seminar-kit.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Seminar Kit">
                                 <div>
@@ -605,7 +605,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/vendor-souvenir-jakarta.png"
+                                <img src="assets/vendor-souvenir-jakarta.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Vendor Jakarta">
                                 <div>
@@ -622,8 +622,8 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/souvenir-gadget-elektronik.png"
-                                    onerror="this.src='assets/category-gadget.png'"
+                                <img src="assets/souvenir-gadget-elektronik.webp"
+                                    onerror="this.src='assets/category-gadget.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Gadget">
                                 <div>
